seaqt/QtCore/gen_qmetacontainer.nim


proc fcQMetaContainer_hasInputIterator(self: pointer, ): bool {.importc: "QMetaContainer_hasInputIterator".}
proc fcQMetaContainer_hasForwardIterator(self: pointer, ): bool {.importc: "QMetaContainer_hasForwardIterator".}
proc fcQMetaContainer_hasBidirectionalIterator(self: pointer, ): bool {.importc: "QMetaContainer_hasBidirectionalIterator".}
proc fcQMetaContainer_hasRandomAccessIterator(self: pointer, ): bool {.importc: "QMetaContainer_hasRandomAccessIterator".}
proc fcQMetaContainer_hasSize(self: pointer, ): bool {.importc: "QMetaContainer_hasSize".}
proc fcQMetaContainer_size(self: pointer, container: pointer): int64 {.importc: "QMetaContainer_size".}
proc fcQMetaContainer_canClear(self: pointer, ): bool {.importc: "QMetaContainer_canClear".}
proc fcQMetaContainer_clear(self: pointer, container: pointer): void {.importc: "QMetaContainer_clear".}
proc fcQMetaContainer_hasIterator(self: pointer, ): bool {.importc: "QMetaContainer_hasIterator".}
proc fcQMetaContainer_begin(self: pointer, container: pointer): pointer {.importc: "QMetaContainer_begin".}
proc fcQMetaContainer_endX(self: pointer, container: pointer): pointer {.importc: "QMetaContainer_end".}
proc fcQMetaContainer_destroyIterator(self: pointer, iteratorVal: pointer): void {.importc: "QMetaContainer_destroyIterator".}
proc fcQMetaContainer_compareIterator(self: pointer, i: pointer, j: pointer): bool {.importc: "QMetaContainer_compareIterator".}
proc fcQMetaContainer_copyIterator(self: pointer, target: pointer, source: pointer): void {.importc: "QMetaContainer_copyIterator".}
proc fcQMetaContainer_advanceIterator(self: pointer, iteratorVal: pointer, step: int64): void {.importc: "QMetaContainer_advanceIterator".}
proc fcQMetaContainer_diffIterator(self: pointer, i: pointer, j: pointer): int64 {.importc: "QMetaContainer_diffIterator".}
proc fcQMetaContainer_hasConstIterator(self: pointer, ): bool {.importc: "QMetaContainer_hasConstIterator".}
proc fcQMetaContainer_constBegin(self: pointer, container: pointer): pointer {.importc: "QMetaContainer_constBegin".}
proc fcQMetaContainer_constEnd(self: pointer, container: pointer): pointer {.importc: "QMetaContainer_constEnd".}
proc fcQMetaContainer_destroyConstIterator(self: pointer, iteratorVal: pointer): void {.importc: "QMetaContainer_destroyConstIterator".}
proc fcQMetaContainer_compareConstIterator(self: pointer, i: pointer, j: pointer): bool {.importc: "QMetaContainer_compareConstIterator".}
proc fcQMetaContainer_copyConstIterator(self: pointer, target: pointer, source: pointer): void {.importc: "QMetaContainer_copyConstIterator".}
proc fcQMetaContainer_advanceConstIterator(self: pointer, iteratorVal: pointer, step: int64): void {.importc: "QMetaContainer_advanceConstIterator".}
proc fcQMetaContainer_diffConstIterator(self: pointer, i: pointer, j: pointer): int64 {.importc: "QMetaContainer_diffConstIterator".}
proc fcQMetaContainer_new(): ptr cQMetaContainer {.importc: "QMetaContainer_new".}
proc fcQMetaContainer_new2(param1: pointer): ptr cQMetaContainer {.importc: "QMetaContainer_new2".}
proc fcQMetaSequence_valueMetaType(self: pointer, ): pointer {.importc: "QMetaSequence_valueMetaType".}
proc fcQMetaSequence_isSortable(self: pointer, ): bool {.importc: "QMetaSequence_isSortable".}
proc fcQMetaSequence_canAddValueAtBegin(self: pointer, ): bool {.importc: "QMetaSequence_canAddValueAtBegin".}
proc fcQMetaSequence_addValueAtBegin(self: pointer, container: pointer, value: pointer): void {.importc: "QMetaSequence_addValueAtBegin".}
proc fcQMetaSequence_canAddValueAtEnd(self: pointer, ): bool {.importc: "QMetaSequence_canAddValueAtEnd".}
proc fcQMetaSequence_addValueAtEnd(self: pointer, container: pointer, value: pointer): void {.importc: "QMetaSequence_addValueAtEnd".}
proc fcQMetaSequence_canRemoveValueAtBegin(self: pointer, ): bool {.importc: "QMetaSequence_canRemoveValueAtBegin".}
proc fcQMetaSequence_removeValueAtBegin(self: pointer, container: pointer): void {.importc: "QMetaSequence_removeValueAtBegin".}
proc fcQMetaSequence_canRemoveValueAtEnd(self: pointer, ): bool {.importc: "QMetaSequence_canRemoveValueAtEnd".}
proc fcQMetaSequence_removeValueAtEnd(self: pointer, container: pointer): void {.importc: "QMetaSequence_removeValueAtEnd".}
proc fcQMetaSequence_canGetValueAtIndex(self: pointer, ): bool {.importc: "QMetaSequence_canGetValueAtIndex".}
proc fcQMetaSequence_valueAtIndex(self: pointer, container: pointer, index: int64, resultVal: pointer): void {.importc: "QMetaSequence_valueAtIndex".}
proc fcQMetaSequence_canSetValueAtIndex(self: pointer, ): bool {.importc: "QMetaSequence_canSetValueAtIndex".}
proc fcQMetaSequence_setValueAtIndex(self: pointer, container: pointer, index: int64, value: pointer): void {.importc: "QMetaSequence_setValueAtIndex".}
proc fcQMetaSequence_canAddValue(self: pointer, ): bool {.importc: "QMetaSequence_canAddValue".}
proc fcQMetaSequence_addValue(self: pointer, container: pointer, value: pointer): void {.importc: "QMetaSequence_addValue".}
proc fcQMetaSequence_canRemoveValue(self: pointer, ): bool {.importc: "QMetaSequence_canRemoveValue".}
proc fcQMetaSequence_removeValue(self: pointer, container: pointer): void {.importc: "QMetaSequence_removeValue".}
proc fcQMetaSequence_canGetValueAtIterator(self: pointer, ): bool {.importc: "QMetaSequence_canGetValueAtIterator".}
proc fcQMetaSequence_valueAtIterator(self: pointer, iteratorVal: pointer, resultVal: pointer): void {.importc: "QMetaSequence_valueAtIterator".}
proc fcQMetaSequence_canSetValueAtIterator(self: pointer, ): bool {.importc: "QMetaSequence_canSetValueAtIterator".}
proc fcQMetaSequence_setValueAtIterator(self: pointer, iteratorVal: pointer, value: pointer): void {.importc: "QMetaSequence_setValueAtIterator".}
proc fcQMetaSequence_canInsertValueAtIterator(self: pointer, ): bool {.importc: "QMetaSequence_canInsertValueAtIterator".}
proc fcQMetaSequence_insertValueAtIterator(self: pointer, container: pointer, iteratorVal: pointer, value: pointer): void {.importc: "QMetaSequence_insertValueAtIterator".}
proc fcQMetaSequence_canEraseValueAtIterator(self: pointer, ): bool {.importc: "QMetaSequence_canEraseValueAtIterator".}
proc fcQMetaSequence_eraseValueAtIterator(self: pointer, container: pointer, iteratorVal: pointer): void {.importc: "QMetaSequence_eraseValueAtIterator".}
proc fcQMetaSequence_canEraseRangeAtIterator(self: pointer, ): bool {.importc: "QMetaSequence_canEraseRangeAtIterator".}
proc fcQMetaSequence_eraseRangeAtIterator(self: pointer, container: pointer, iterator1: pointer, iterator2: pointer): void {.importc: "QMetaSequence_eraseRangeAtIterator".}
proc fcQMetaSequence_canGetValueAtConstIterator(self: pointer, ): bool {.importc: "QMetaSequence_canGetValueAtConstIterator".}
proc fcQMetaSequence_valueAtConstIterator(self: pointer, iteratorVal: pointer, resultVal: pointer): void {.importc: "QMetaSequence_valueAtConstIterator".}
proc fcQMetaSequence_new(): ptr cQMetaSequence {.importc: "QMetaSequence_new".}
proc fcQMetaAssociation_keyMetaType(self: pointer, ): pointer {.importc: "QMetaAssociation_keyMetaType".}
proc fcQMetaAssociation_mappedMetaType(self: pointer, ): pointer {.importc: "QMetaAssociation_mappedMetaType".}
proc fcQMetaAssociation_canInsertKey(self: pointer, ): bool {.importc: "QMetaAssociation_canInsertKey".}
proc fcQMetaAssociation_insertKey(self: pointer, container: pointer, key: pointer): void {.importc: "QMetaAssociation_insertKey".}
proc fcQMetaAssociation_canRemoveKey(self: pointer, ): bool {.importc: "QMetaAssociation_canRemoveKey".}
proc fcQMetaAssociation_removeKey(self: pointer, container: pointer, key: pointer): void {.importc: "QMetaAssociation_removeKey".}
proc fcQMetaAssociation_canContainsKey(self: pointer, ): bool {.importc: "QMetaAssociation_canContainsKey".}
proc fcQMetaAssociation_containsKey(self: pointer, container: pointer, key: pointer): bool {.importc: "QMetaAssociation_containsKey".}
proc fcQMetaAssociation_canGetMappedAtKey(self: pointer, ): bool {.importc: "QMetaAssociation_canGetMappedAtKey".}
proc fcQMetaAssociation_mappedAtKey(self: pointer, container: pointer, key: pointer, mapped: pointer): void {.importc: "QMetaAssociation_mappedAtKey".}
proc fcQMetaAssociation_canSetMappedAtKey(self: pointer, ): bool {.importc: "QMetaAssociation_canSetMappedAtKey".}
proc fcQMetaAssociation_setMappedAtKey(self: pointer, container: pointer, key: pointer, mapped: pointer): void {.importc: "QMetaAssociation_setMappedAtKey".}
proc fcQMetaAssociation_canGetKeyAtIterator(self: pointer, ): bool {.importc: "QMetaAssociation_canGetKeyAtIterator".}
proc fcQMetaAssociation_keyAtIterator(self: pointer, iteratorVal: pointer, key: pointer): void {.importc: "QMetaAssociation_keyAtIterator".}
proc fcQMetaAssociation_canGetKeyAtConstIterator(self: pointer, ): bool {.importc: "QMetaAssociation_canGetKeyAtConstIterator".}
proc fcQMetaAssociation_keyAtConstIterator(self: pointer, iteratorVal: pointer, key: pointer): void {.importc: "QMetaAssociation_keyAtConstIterator".}
proc fcQMetaAssociation_canGetMappedAtIterator(self: pointer, ): bool {.importc: "QMetaAssociation_canGetMappedAtIterator".}
proc fcQMetaAssociation_mappedAtIterator(self: pointer, iteratorVal: pointer, mapped: pointer): void {.importc: "QMetaAssociation_mappedAtIterator".}
proc fcQMetaAssociation_canGetMappedAtConstIterator(self: pointer, ): bool {.importc: "QMetaAssociation_canGetMappedAtConstIterator".}
proc fcQMetaAssociation_mappedAtConstIterator(self: pointer, iteratorVal: pointer, mapped: pointer): void {.importc: "QMetaAssociation_mappedAtConstIterator".}
proc fcQMetaAssociation_canSetMappedAtIterator(self: pointer, ): bool {.importc: "QMetaAssociation_canSetMappedAtIterator".}
proc fcQMetaAssociation_setMappedAtIterator(self: pointer, iteratorVal: pointer, mapped: pointer): void {.importc: "QMetaAssociation_setMappedAtIterator".}
proc fcQMetaAssociation_canCreateIteratorAtKey(self: pointer, ): bool {.importc: "QMetaAssociation_canCreateIteratorAtKey".}
proc fcQMetaAssociation_createIteratorAtKey(self: pointer, container: pointer, key: pointer): pointer {.importc: "QMetaAssociation_createIteratorAtKey".}
proc fcQMetaAssociation_canCreateConstIteratorAtKey(self: pointer, ): bool {.importc: "QMetaAssociation_canCreateConstIteratorAtKey".}
proc fcQMetaAssociation_createConstIteratorAtKey(self: pointer, container: pointer, key: pointer): pointer {.importc: "QMetaAssociation_createConstIteratorAtKey".}
proc fcQMetaAssociation_new(): ptr cQMetaAssociation {.importc: "QMetaAssociation_new".}

proc hasInputIterator*(self: gen_qmetacontainer_types.QMetaContainer, ): bool =
  fcQMetaContainer_hasInputIterator(self.h)

proc hasForwardIterator*(self: gen_qmetacontainer_types.QMetaContainer, ): bool =
  fcQMetaContainer_hasForwardIterator(self.h)

proc hasBidirectionalIterator*(self: gen_qmetacontainer_types.QMetaContainer, ): bool =
  fcQMetaContainer_hasBidirectionalIterator(self.h)

proc hasRandomAccessIterator*(self: gen_qmetacontainer_types.QMetaContainer, ): bool =
  fcQMetaContainer_hasRandomAccessIterator(self.h)

proc hasSize*(self: gen_qmetacontainer_types.QMetaContainer, ): bool =
  fcQMetaContainer_hasSize(self.h)

proc size*(self: gen_qmetacontainer_types.QMetaContainer, container: pointer): int64 =
  fcQMetaContainer_size(self.h, container)

proc canClear*(self: gen_qmetacontainer_types.QMetaContainer, ): bool =
  fcQMetaContainer_canClear(self.h)

proc clear*(self: gen_qmetacontainer_types.QMetaContainer, container: pointer): void =
  fcQMetaContainer_clear(self.h, container)

proc hasIterator*(self: gen_qmetacontainer_types.QMetaContainer, ): bool =
  fcQMetaContainer_hasIterator(self.h)

proc begin*(self: gen_qmetacontainer_types.QMetaContainer, container: pointer): pointer =
  fcQMetaContainer_begin(self.h, container)

proc endX*(self: gen_qmetacontainer_types.QMetaContainer, container: pointer): pointer =
  fcQMetaContainer_endX(self.h, container)
